Styling and conversion updates

--- a/_posts/2025-09-29-coffee.md
+++ b/_posts/2025-09-29-coffee.md
@@ -30,7 +30,8 @@ Endemic to the highlands of Ethiopia, southeastern Sudan, and northern Kenya, Ar
 
 Arabica became an agent of connection and community building where it was grown and, further down the supply chain, where it was consumed. Coffeehouses have served as centers of intellectual and cultural exchange for centuries. Countless relationships have been sparked by the question, "Do you want to meet for coffee?" Between planting, harvesting, processing, milling, roasting, and every other step of production and distribution, coffee is touched by at least nine sets of hands before it reaches the consumer.[^5]
 
-`youtube vid=faTsRV7bkEc caption="Coffee: From Farm to Cup" aspect=1.8`
+{% include embed/youtube.html vid="faTsRV7bkEc" class="right" %}
+_Caption_
 
 Demand for coffee continues to grow, but the future of the industry is uncertain. In addition to concerns over price volatility and labor conditions on coffee farms, Arabica coffee is especially vulnerable to climate change and its associated impacts, such as rising temperatures, altered precipitation, and increased pressure from insect pests and plant pathogens. Researchers have proposed a number of solutions to protect the plant and other coffee species, each with unique benefits and challenges. These suggestions, if implemented thoughtfully and collaboratively by industry stakeholders, can help safeguard coffee production—and with it, the enduring legacy of a rich global history. 
 
@@ -40,11 +41,11 @@ Demand for coffee continues to grow, but the future of the industry is uncertain
 
 The early years of coffee consumption are shrouded in mystery. Most coffee historians have encountered the legend about an Ethiopian goat herder named Kaldi, who noticed his livestock became more energetic after eating the fruits from a coffee plant.[^6] Intrigued, he tried the fruit for himself and felt a thrilling rush of vitality. As the story goes, Kaldi shared his findings with monks at a nearby monastery, initiating coffee’s rise to fame. 
 
-`youtube vid=BU-0e6OLIf0 caption="The Legend of Kaldi" aspect=1.8`
+{% include embed/youtube.html id="BU-0e6OLIf0" caption="The Legend of Kaldi" aspect="1.8" class="right" %}
 
 It is believed that Kaldi’s alleged discovery of coffee dates to the ninth century, but the earliest written record with any resemblance to the myth appears much later. Mehrej Ibn Nimrûm, a Maronite scholar and priest also known as Antonio Faustus Naironi or Banesius, was the first to reference the legend in his 1671 treatise on coffee’s history and virtues.[^7] Instead of Ethiopia, the story is set in Yemen, where Arabica arrived as early as the sixth century.[^8] Nimrûm describes a man who complained to monastics that his livestock—camels in some variations, goats in others—were "frisking and dancing" instead of sleeping.[^9] The head of the monastery purportedly visited the pasture and, after locating the fruits upon which the livestock fed, "resolved to try the virtues of these berries himself; thereupon, boiling them in water, and drinking thereof, he found by experience, it kept him awake in the night."[^10] He then told his fellow monks about the beverage, offering revitalization in their pursuit of the divine. 
 
-`iframe src=https://archive.org/details/bim_eighteenth-century_a-discourse-on-coffee-i_naironus-antonius-faust_1710/page/n9?view=theater aspect=0.65`
+{% include embed/iframe.html src="https://archive.org/details/bim_eighteenth-century_a-discourse-on-coffee-i_naironus-antonius-faust_1710/page/n9?view=theater" aspect="0.65" class="right" %}
 
 The history of coffee solidifies around 1450, when [Sufi](Q9603) practitioners in Yemen reported using the beverage to aid their concentration in prayer.[^11] In the sixteenth century, the Ottoman state harnessed coffee cultivation to fill the gap created by the economic downfall of the Red Sea spice trade.[^12] A matrix of coffee trading posts developed in Yemen, including inland sites of cultivation, a wholesale market in the lowland city of Bayt al-Faqīh, and the ports of Mocha, al-Hudaydah, and al-Luhayyah. Merchants carried coffee beans across terrestrial routes and the Red Sea to the Hejaz, Cairo, the Levant, and Istanbul.
 
@@ -56,13 +57,13 @@ The Dutch East India Company introduced coffee cultivation to the Dutch colony o
 
 The French colonial empire facilitated the passage of Arabica to the Caribbean. In 1720, French naval officer Gabriel de Clieu journeyed to the colony of Martinique with two coffee plants from Amsterdam, only one of which survived. In the decades that followed, coffee spread throughout the Caribbean islands. Several coffee plantations in European colonies relied on enslaved labor. In eighteenth-century Grenada, for example, enslaved people tended more than 12,000 acres of coffee properties.[^15]
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vT6Pi5o3k7Vtrj-UHyHwvY11Mw_QdQszuPBl-uMfPWou70UAv4QXTrHL_u9xFMILvZITzdMnDtHVwd0&font=Default&lang=en&initial_zoom=2&width=100%25&height=650 height=650 .full`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vT6Pi5o3k7Vtrj-UHyHwvY11Mw_QdQszuPBl-uMfPWou70UAv4QXTrHL_u9xFMILvZITzdMnDtHVwd0&font=Default&lang=en&initial_zoom=2&width=100%25&height=650" class="right" %}
 
 # Coffeehouse Culture
 
 As coffee dispersed via merchants and colonial powers, so did the establishment of coffeehouses. According to James Douglas, an eighteenth-century anatomist, botanist, and bibliophile, the first coffeehouse was founded in Mecca near the end of the fifteenth century.[^16] "Thither crowds of people resorted at all hours of the day, to enjoy the pleasure of conversation, play at chess and other games, dance, sing, and divert themselves all manner of ways, under the pretense of drinking coffee," he writes.[^17] These meeting places appeared wherever coffee was consumed, hosting lively exchanges of news, ideas, and political debates. Travelers who visited coffeehouses often left inspired and brought the custom back to their home countries.  
 
-`iframe  src=https://archive.org/details/supplementtodesc1727doug/page/14?view=theater aspect=0.65`
+{% include embed/iframe.html src="https://archive.org/details/supplementtodesc1727doug/page/14?view=theater" aspect="0.65" class="right" %}
 
 In some cities, the initial establishment of coffeehouses did not receive unanimous support. Authorities questioned the merits of these gathering spaces, condemning their associations with merry-making and disorder. In sixteenth-century Cairo, for instance, an imam employed his rhetoric against coffee and called its consumption unlawful. Douglas recounts, "His discourse had so great an effect on the mob who heard it, that, as soon as service was over, they went and pulled down all the coffeehouses that fell in their way, broke the pots and dishes, and maltreated the company they found in them."[^18] Coffee ultimately triumphed in court after a judge consulted an assembly of doctors, all of whom decided in favor of the beverage. The drink was redeemed by its delectable flavor and presumed medicinal benefits, said to "keep the body in good health," "quicken the spirits," and "make the heart lightsome."[^19]
 
@@ -78,7 +79,7 @@ Historian Brian Cowan summarizes the Habermasian view of the coffeehouse as "a n
 
 With the rise of industrialization in the eighteenth century, coffee became entangled with labor. As a stimulant, it was a "first-rate efficiency factor" that "promised nothing less than to lengthen and intensify the *time* available for work."[^25] Coffee enabled the working class to fend off drowsiness in favor of endurance and productivity. 
 
-`youtube vid=WD6cYabx0nk caption="Coffee and Labor" aspect=1.8`
+{% include embed/youtube.html id="WD6cYabx0nk" caption="Coffee and Labor" aspect="1.8" class="right" %}
 
 Today, coffee continues to power labor forces in diverse workplaces, from offices to farms and factories. Contemporary coffeehouses have come a long way from their earliest ancestors, with modern brewing equipment and fewer social limitations, but they embody many of the same virtues. John Frederick Frank’s 1947 poem "Coffee Hour" paints the coffeehouse as a community hub. It begins, "Society solidified: three old ladies / Sipping primly, facing friends."[^26] Centuries after Yemen’s initial cultivation of Arabica, the plant continues to connect us. 
 
@@ -96,7 +97,7 @@ Genetic diversity is key to climate resilience. Species with a diverse gene pool
 
 The optimal growing conditions for Arabica coffee include temperatures between 57 and 79 degrees Fahrenheit, moderate rainfall, and an annual dry period of one to three months.[^30] These conditions will become harder to achieve in current coffee-growing regions as fossil fuel combustion and deforestation—including the clearing of forests for coffee farms—alter worldwide temperatures and weather patterns. Global warming and changes in precipitation will interfere with coffee plant growth, flowering, and fruiting, resulting in poor yields and lower-quality beans.[^31]
 
-`youtube vid=A33NTsWxc-o caption="Climate Change and Coffee Products" aspect=1.8`
+{% include embed/youtube.html id="A33NTsWxc-o" caption="Climate Change and Coffee Products" aspect="1.8" class="right" %}
 
 Researchers predict that climate change will drastically reduce coffee-suitable lands in the coming decades. One study projects that by 2050, the world’s most suitable areas for growing Arabica coffee could shrink by 54 to 60 percent.[^32] Another study estimates that Latin America could lose as much as 88 percent of its coffee-growing land by the same year.[^33]
 
@@ -108,7 +109,7 @@ Arabica is further threatened by another climate-related shift: more frequent an
 
 Such is the case for the coffee berry borer (*Hypothenemus hampei*), the world’s most notorious coffee insect pest.[^35] At less than two millimeters long, the female beetles bore into coffee fruits and feed on the developing seeds, creating galleries in which they can lay as many as 100 eggs. The larvae feast on the seed in which they hatch, further reducing its size and quality. The beetle has spread from West Africa to almost all coffee-producing regions, resulting in yearly losses that easily surpass 500 million dollars.[^36]
 
-`image-compare before=wc:Coffee_berry_borer2.jpg after=wc:Amy_farms_typica_hybrid_coffee_beans.jpg caption="Swipe across the images to see the impact of a coffee berry borer infestation."`
+{% include embed/image-compare.html before="wc:Coffee_berry_borer2.jpg" after="wc:Amy_farms_typica_hybrid_coffee_beans.jpg" caption="Swipe across the images to see the impact of a coffee berry borer infestation." class="right" %}
 
 Farmers typically treat these infestations by spraying chemical insecticides, releasing biological control agents, or removing and destroying infested coffee berries. However, the adoption and effectiveness of these practices vary based on cost, labor availability, and producer knowledge. With climate change, the problem will only get worse. The beetle is expected to plague previously unaffected regions, and its developmental time has been shown to decrease with warmer temperatures, meaning more insect generations and more damage.[^37]
 
@@ -116,11 +117,11 @@ Farmers typically treat these infestations by spraying chemical insecticides, re
 
 Climate change could also intensify outbreaks of coffee leaf rust (*Hemileia vastatrix*). This fungal pathogen has caused extensive damage since it was first identified in the nineteenth century.[^38] The ailment blemishes coffee leaves with yellow and brown spots, coating their undersides with orange fungal spores. Infected trees lose their rusted leaves, produce lower yields, and usually die within a few years. In 2011, an epidemic that began in Central America damaged crops on roughly 70 percent of Latin American coffee farms, causing more than three billion dollars in damages by 2021. Now, higher temperatures and extreme weather events like flooding may create environments that are more conducive to the growth of the pathogen.[^39]
 
-`image-compare before=wc:Hemileia_vastatrix.jpg after=wc:Coffea_arabica_Kawa_arabska_2021-0-09_01.jpg caption="Swipe across the images to compare healthy coffee leaves with those infected by coffee leaf rust."`
+{% include embed/image-compare.html before="wc:Hemileia_vastatrix.jpg" after="wc:Coffea_arabica_Kawa_arabska_2021-0-09_01.jpg" caption="Swipe across the images to compare healthy coffee leaves with those infected by coffee leaf rust." class="right" %}
 
 These challenges send ripples throughout the supply chain. In January 2025, coffee prices soared as a result of poor growing seasons due to drought, frost, and floods in Brazil and Vietnam.[^40] Low yields, coupled with rising demand, drove the retail price of ground coffee to an all-time high of seven dollars per pound, up from four dollars in January 2020. In theory, higher prices should yield higher profits for coffee growers—but it’s not that simple. The costs of labor, fertilizers, and other inputs are rising alongside coffee prices.[^41] Some coffee growers are concerned that coffee drinkers may limit their consumption in response to high prices, opting for cheaper sodas or energy drinks to satisfy their caffeine cravings.[^42]
 
-`youtube vid=4VePbuE9iIk caption="Global Coffee Prices Rise as Drought Hits Brazil" aspect=1.8`
+{% include embed/youtube.html id="4VePbuE9iIk" caption="Global Coffee Prices Rise as Drought Hits Brazil" aspect="1.8" class="right" %}
 
 Climate change impacts both the coffee plant and the billions of people with a relationship to the crop, exacerbating the challenges that industry stakeholders already face. Extreme weather events, inflation, interest rates, unstable energy prices, and global conflicts drive market volatility.[^43] Some farmers toil under intense heat for eight to ten hours a day for very low wages.[^44] Smallholder farmers, who are responsible for at least 60 percent of the global coffee production, often have little negotiating power in coffee supply chains and are forced to get by on meager payments for their crops.[^45] In an ethnographic study of the Vietnamese coffee industry, Sarah G. Grant describes "a complicated web of risks and uncertainty" in which the decisions of state and global actors often fail to meet the needs of farmers.[^46]
 
@@ -134,7 +135,7 @@ Climate change will make coffee prices more unpredictable, labor conditions more
 
 In an ideal world, we would address the root cause of climate change by minimizing greenhouse gas emissions and protecting carbon sinks, such as oceans and forests. Unfortunately, our current climate mitigation policies are proving insufficient.[^48] The coffee industry must adapt accordingly. 
 
-`youtube vid=fmBDZKOdbkY caption="Climate Adaptation and Mitigation" aspect=1.8`
+{% include embed/youtube.html id="fmBDZKOdbkY" caption="Climate Adaptation and Mitigation" aspect="1.8" class="right" %}
 
 Researchers have identified three main pathways to climate resilience in coffee production.[^49] The first involves relocating coffee farming to areas with suitable climates, including higher elevations. Although relocation would alleviate thermal stresses on coffee plants, the transition could result in the loss of livelihoods for farming communities at lower elevations as well as deforestation in favor of agricultural expansion.[^50]
 
@@ -150,7 +151,7 @@ The third pathway—which is considered "the least disruptive, the most cost-eff
 
 Using traditional plant breeding methods, scientists can develop hybrid coffee plants with desirable traits like disease resistance and drought tolerance. Current breeding efforts focus primarily on first-generation (F1) hybrid varieties, which are created by transferring pollen from the flower of one genetically distinct parent to another using a paintbrush, then planting the resulting seeds. Breeders typically cross wild Arabica varieties from Sudan or Ethiopia with common American cultivars. According to World Coffee Research, "One of the key distinguishing features of F1 hybrids is their 'hybrid vigor,' which can translate into everything from higher yields, to wider climate adaptability, to resilience in the face of stresses like disease (e.g., coffee rust), frost, or drought."[^56]
 
-`youtube vid=xahFgSSLonQ caption="Coffee Breeding" aspect=1.8`
+{% include embed/youtube.html id="xahFgSSLonQ" caption="Coffee Breeding" aspect="1.8" class="right" %}
 
 Early breeding efforts have prioritized Arabica and robusta, the species and flavor profiles that consumers know and love. But researchers are turning to other coffee species in search of climate-resilient traits. *Coffea stenophylla*, for instance, is a narrow-leaved species once farmed in Sierra Leone with a much higher temperature tolerance than Arabica.[^57] The plant’s beans have been described as "superior to those of all other species."[^58] Their flavor resembles a premium Arabica, with undertones of peach, jasmine, chocolate, and elderflower syrup. *Coffea stenophylla* produces comparatively low yields, but the plant’s heat tolerance, coupled with the impeccable cup quality, makes it a promising contender for coffee breeding. 
 
