--- a/_posts/2025-11-25-wild-rice.md
+++ b/_posts/2025-11-25-wild-rice.md
@@ -35,7 +35,7 @@ The *Zizania* genus is housed in the Oryza genus of the Poaceae (grass) family. 
 *Z. palustris*, whose specific epithet translates as "marshy" or "swampy," was originally thought to belong to *Z. aquatica*, a species of wild rice native to the Eastern United States. However, in his *Mantissa Plantarum Altera* (1771), a book of botanical text and illustrations, Swedish botanist [Carl Linnaeus](https://en.wikipedia.org/wiki/Carl_Linnaeus) distinguishes the two plants as separate species.[^3]
 
 {% include embed/image.html src="wc:Carl_von_Linné.jpg" caption="Carl Linnaeus (1775)" aspect="0.83" class="right" %}
-`iframe src=https://www.biodiversitylibrary.org/page/42945403page/163/mode/1up aspect=`
+{% include embed/iframe.html src="https://www.biodiversitylibrary.org/page/42945403page/163/mode/1up" class="right" %}
 
 The turn of the twenty-first century saw the release of the first wild rice genome map, and with it came concern over the flow of genes from cultivated to wild rice stands, or groups of plants.[^4] In the wild-rice waters of northern Minnesota, researchers have found that wild rice populations are genetically distinct from one another and that there is very little [gene flow](https://en.wikipedia.org/wiki/Gene_flow) across watersheds.[^5] Concerns remain that genetically diverse wild stands, whose seeds are unable to be stored in [ex situ repositories](https://en.wikipedia.org/wiki/Seed_bank), will be overtaken by genetically modified wild rice supergroups.[^6] 
 
@@ -82,7 +82,7 @@ Many travelers to the Great Lakes region following Kalm’s expedition viewed wi
 
 In his 1803 "Observation on the *Zizania aquatica*," British botanist Aylmer Bourke Lambert described the transportation of *Z. aquatica* seeds from Canada to Europe in glass jars. Long considered a "desideratum among the botanists of [England]," he noted his desire to grow the seeds in the "many shallow pieces of water" in Great Britain and Ireland.[^18] Beginning with French botanist André Michaux, few, if any, were able to grow wild rice in Europe.[^19]
 
-`iframe src=https://www.biodiversitylibrary.org/page/756477#page/317/`
+{% include embed/iframe.html src="https://www.biodiversitylibrary.org/page/756477#page/317/" class="right" %}
 {% include embed/image.html src="wc:Aylmer_Bourke_Lambert._Stipple_engraving_by_W._Holl,_1805,_a_Wellcome_V0003335.jpg" caption="xxx" aspect="0.73" class="right" %}
 {% include embed/image.html src="wc:François_André_Michaux_(1770–1855).jpg" caption="xxx" aspect="0.74" class="right" %}
 
@@ -96,25 +96,25 @@ Cultural traditions involving wild rice were linked to the seasons. Anishinaabe 
 
 In "Gathering Wild Rice, 1849–1855," Seth Eastman, an artist and U.S. Army commander at Fort Snelling, depicts three women, most likely Anishinaabe, in the process of harvesting wild rice. The watercolor drawing, the first known painting of wild rice, depicts one woman paddling a canoe and two others beating rice stalks with flat paddles. American anthropologist and ethnographer Frances Densmore later captured the multi-step harvesting process in her photography from the early twentieth century. In her 1928 "How Indians Use Wild Plants for Food, Medicine, and Crafts," Densmore describes the process of establishing harvesting camps and the act of "ricing" itself, in which Ojibwe women would harvest by traveling in birchbark canoes.[^22] When ricing, one person would paddle the canoe using a push pole (Gaandakii-iganaak), while another would knock rice stalks with special sticks (Bawa’iganaak) so that ripe rice seeds would fall into the canoe and into the lake water. After harvesting, the rice was dried on birchbark sheets, parched to loosen the husk, and pounded with wooden paddles. It would then be winnowed and trodden upon and later stored. In the lakes and streams that had not been disrupted by dam construction, year after year over the course of centuries, the knowledge and practices of ricing had been kept alive and passed down through generations of Ojibwe. 
 
-`iframe src=NL000379_o2.jpg`
+{% include embed/iframe.html src="NL000379_o2.jpg" class="right" %}
 {% include embed/image.html src="wc:Wild_rice_harvesting_and_processing_-_NARA_-_285183.jpg" caption="Wild rice harvesting and processing" aspect="1.7" class="right" %}
 {% include embed/image.html src="wc:Winnowing_the_wild_rice_in_a_birch_bark_basket.jpg" caption="Winnowing the wild rice in a birch bark basket" aspect="1.5" class="right" %}
 {% include embed/image.html src="wc:Parching_the_wild_rice_over_an_open_flame.jpg" caption="Parching the wild rice over an open flame" aspect="1.5" class="right" %}
-`youtube vid=SH_YYyw9yF8 aspect=1.8`
-`youtube vid=6tjd7H1iQWY aspect=1.8`
-`youtube vid=EFW5QE6ahOU aspect=1.8`
+{% include embed/video.html src="SH_YYyw9yF8" aspect="1.8" class="right" %}
+{% include embed/video.html src="6tjd7H1iQWY" aspect="1.8" class="right" %}
+{% include embed/video.html src="EFW5QE6ahOU" aspect="1.8" class="right" %}
 
 Historically, both Ojibwe men and women performed wild rice harvesting, with men steering the canoe and women knocking the grains into the canoe. In the decades following land cessions, forced migration, and colonial settlement, the labor relations and gender roles involved in harvesting changed. During the early twentieth century, the state of Minnesota created [wild rice camps](https://www.kaxe.org/local-news/2023-09-22/wild-rice-camp-highlights-sacred-plant-and-the-fight-to-protect-it), and state control over wild rice harvesting was codified in 1939.[^23] According to Ojibwe historian Brenda Child, the wild rice waters and ricing camps were gendered spaces where women expressed autonomy through the labor and organization of creating and maintaining wild rice economies. Indeed, the wild rice waters themselves became a gendered landscape through women’s involvement in and jurisdiction over harvesting and ricing.[^24]
 
-`youtube vid=HvLvwo3a5PU aspect=1.8`
+{% include embed/video.html src="HvLvwo3a5PU" aspect="1.8" class="right" %}
 {% include embed/image.html src="wc:Wild_rice_harvesting_and_processing_-_NARA_-_285183.jpg" caption="Wild rice harvesting and processing" aspect="1.7" class="right" %}
 
 # Landscape as Collaborator
 
 Wild rice plays an important part in the aquatic plant communities of the northern Great Lakes region. It benefits local food networks and wetland ecology by participating in the water [nutrient cycle](https://en.wikipedia.org/wiki/Nutrient_cycle), stabilizing coastal river wetland sediment and providing habitat for other species. Rooted in sediment, the plant grows along the margins of small streams and shallow lakes. Albert Jenks, a University of Minnesota professor of anthropology, noted the landscape conditions required for its growth in his *Wild Rice Gatherers of the Upper Lakes* (1907): "Wherever the last glacier left little mid-bottomed, water-filled hollows, there wild rice has established itself, if other conditions are favorable. Such ponds and lakes are characteristic of the alluvial apron spread out over Wisconsin and Minnesota."[^25]
 
-`image-compare before=wc:Wild_rice_plants_-_NARA_-_285206.jpg after=wc:Northern_Wild_Rice_(Zizania_palustris),_Coventry,_RI_(39518308664).jpg caption="Swipe across images to view the conditions of wild rice habitat in 2010 and 1937" aspect=`
-`iframe src=https://tile.loc.gov/storage-services/public/gdcmassbookdig/wildricegatherer00jenk/wildricegatherer00jenk.pdf`
+{% include embed/image-compare.html before="wc:Wild_rice_plants_-_NARA_-_285206.jpg" after="wc:Northern_Wild_Rice_(Zizania_palustris),_Coventry,_RI_(39518308664).jpg" caption="Swipe across images to view the conditions of wild rice habitat in 2010 and 1937" class="right" %}
+{% include embed/iframe.html src="https://tile.loc.gov/storage-services/public/gdcmassbookdig/wildricegatherer00jenk/wildricegatherer00jenk.pdf" class="right" %}
 
 Like other grasses, a crucial phase of the wild rice’s life cycle is the shattering of the mature seed, which occurs when the seed drops off the plant once it ripens. Seed heads are located at the top of the plant, and ripe seeds drop from the plant into the water, sinking to the soil where they remain dormant over the winter. They usually [germinate](https://en.wikipedia.org/wiki/Germination) in the following spring. By early summer, wild rice forms floating mats of leaves and seeds cross-pollinated by wind. After reaching maturity in late summer and being harvested in late summer or early autumn, the grass dies. Seed shattering occurs over days to weeks, which allows for multiple harvests to take place.
 
@@ -122,7 +122,7 @@ Like other grasses, a crucial phase of the wild rice’s life cycle is the shatt
 
 Harvesting was not only a process of gathering but also a process of reseeding the plant for future harvests. Jenks wrote that "the plant, unless it is artificially sown, is gradually being extinguished in such beds as are continuously used."[^26] The significant portion of seeds being knocked back into water rather than harvested in the canoe was not waste, but an active management strategy. Responsive to changing environmental conditions, the reseeding during harvest treats the landscape as a collaborator: to remain viable, wild rice seeds require submergence in the soil during undisturbed dormancy. The aquatic landscape remains an active participant in the reseeding process, highlighting the importance of the landscape itself in maintaining a relationship between wild rice and humans. Defined by ecologist Fikret Berkes, TEK is a knowledge-practice-belief complex comprising experience gleaned from thousands of years of direct human contact with their environment.[^27] The artificial sowing of wild rice seeds is one example of the activation of TEK.[^28]
 
-`youtube vid=WpfTvLMNqvg start=5 aspect=1.8`
+{% include embed/video.html src="WpfTvLMNqvg" aspect="1.8" class="right" %}
 
 # Cultivation, Commodification, and Commercialization
 
@@ -140,7 +140,7 @@ Cultivation is domestication occurring in real time. Cultivated wild rice, or wi
 
 With rising temperatures and less ice cover, the proliferation of wild rice is severely threatened by climate change. Its seeds, which require frozen temperatures during their dormancy, cannot germinate as well or at all in warm weather. In addition, rapid fluctuations in water depth due to severe weather events, like concentrated rainfall events and droughts, disrupt plant growth, and as a result, the amount of suitable habitat shrinks.
 
-`youtube vid=46XHxnjGs4o start=1:25 aspect=1.8`
+{% include embed/video.html src="46XHxnjGs4o" aspect="1.8" class="right" %}
 
 Serious threats are posed to naturally occurring wild rice stands by the potential expansion of copper and nickel open-pit mining and their toxic discharges. The amount of sulfate in the St. Louis watershed has increased over the past half-century, adversely affecting the plant’s growth. Today, pipelines like the Enbridge "Line 3" and others threaten the health not only of wild rice habitats, but also of the entire St. Louis watershed and the ecosystems contained therein. 
 
