--- a/_posts/2025-11-25-wild-rice.md
+++ b/_posts/2025-11-25-wild-rice.md
@@ -6,7 +6,7 @@ description: Wild rice (Zizania palustris) is a Great Lakes wetland grass centra
   driving renewed conservation and Rights-of-Nature efforts.
 author: Flora Klein
 date: 2025-11-24
-layout: post-2col
+layout: post
 thumbnail: thumbnail.jpg
 permalink: /wild-rice
 tags: grain staple gluten-free wetland temperate medicinal
