--- a/_posts/2025-09-29-coffee.md
+++ b/_posts/2025-09-29-coffee.md
@@ -9,7 +9,7 @@ author: Nina Foster
 authors:
 - Nina Foster
 date: 2025-09-01
-layout: post-2col
+layout: post
 thumbnail: coffee.jpg
 permalink: /coffee
 tags: beverage stimulant tropical high-altitude shrub tree
